--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.25",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
@@ -24,6 +25,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.17.0",
     "react-tooltip": "^5.30.0",
+    "recharts": "^3.6.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
